@@ -17,6 +17,9 @@ Change log for zeit.web
 - FIX: Refresh contents of advertisement-nextread folder, so we don't access
        content that was retracted while the nextread folder was cached
 
+- FIX: Remove superfluous and misleading interfaces from content objects that
+  have no content type (due to missing or broken meta files).
+
 - MAINT: Ensure stable return type for nextreads and comment counts
 
 - MAINT: Be more defensive about errors when talking to the community
